crates/monochange_integration_tests/tests/snapshots/check_lint_output__check_fix_converts_redundant_changeset_entries_to_inline-2.snap
---
source: crates/monochange_integration_tests/tests/check_lint_output.rs
expression: block_changeset
---
---
core: feat
cli:
  bump: minor
  type: fix
shared:
  bump: patch
---

#### Convert redundant changeset entries to inline form

Object entries that only repeat what the inline form already implies are
condensed to the inline form by `monochange check --fix`.
