crates/monochange_integration_tests/tests/snapshots/check_lint_output__check_fix_converts_redundant_changeset_entries_to_inline-3.snap
---
source: crates/monochange_integration_tests/tests/check_lint_output.rs
expression: flow_changeset
---
---
core: feat
cli: fix
---

#### Convert redundant flow entries to inline form

Flow mappings collapse to the inline form the same way.
