crates/monochange_integration_tests/tests/snapshots/check_lint_output__check_fix_converts_redundant_changeset_entries_to_inline.snap
---
source: crates/monochange_integration_tests/tests/check_lint_output.rs
expression: "normalize_workspace_paths(fixture.path(), output)"
---
✔ Checks passed · fixed 2 files
