crates/monochange_integration_tests/tests/snapshots/check_lint_output__check_fix_leaves_inherited_repositories_alone_when_opted_in.snap
---
source: crates/monochange_integration_tests/tests/check_lint_output.rs
expression: "normalize_workspace_paths(fixture.path(), output)"
---
✔ Checks passed · fixed 1 file
