crates/monochange_integration_tests/tests/snapshots/check_lint_output__check_fix_preserves_package_json_when_multiple_full_file_fixes_exist-2.snap
---
source: crates/monochange_integration_tests/tests/check_lint_output.rs
expression: contents
---
{
  "dependencies": {
    "shared": "workspace:*",
    "zeta": "1.0.0"
  },
  "description": "Application package",
  "devDependencies": {
    "vitest": "1.0.0"
  },
  "name": "app",
  "type": "module",
  "version": "0.0.0"
}
