crates/monochange_integration_tests/tests/snapshots/check_lint_output__check_fix_preserves_package_json_when_multiple_full_file_fixes_exist.snap
---
source: crates/monochange_integration_tests/tests/check_lint_output.rs
expression: "normalize_workspace_paths(fixture.path(), output)"
---
✖ Checks failed · 5 errors · 1 warning · 1 fixable · fixed 1 file

packages/app/package.json
  1:1  ✖ missing required package.json field `repository`
         npm/required-package-fields
  1:1  ✖ missing required package.json field `license`
         npm/required-package-fields
  6:6  ▲ dependencies in `dependencies` are not sorted alphabetically
         npm/sorted-dependencies · fixable

packages/shared/package.json
  1:1  ✖ missing required package.json field `description`
         npm/required-package-fields
  1:1  ✖ missing required package.json field `repository`
         npm/required-package-fields
  1:1  ✖ missing required package.json field `license`
         npm/required-package-fields

1 issue is still auto-fixable; run `monochange check --fix` again.
