crates/monochange_integration_tests/tests/snapshots/check_lint_output__check_fix_resolves_inherited_repository_to_subdirectory_url.snap
---
source: crates/monochange_integration_tests/tests/check_lint_output.rs
expression: "normalize_workspace_paths(fixture.path(), output)"
---
workspace validation passed for [workspace]
lint: no issues found
Fixed all auto-fixable issues.
