crates/monochange_integration_tests/tests/snapshots/check_lint_output__check_lint_output_shows_rule_first_and_verbose_details.snap
---
source: crates/monochange_integration_tests/tests/check_lint_output.rs
expression: output
---
✖ Checks failed · 6 errors · 1 warning · 2 fixable

packages/app/package.json
  1:1   ✖ missing required package.json field `repository`
          npm/required-package-fields
          severity error
  1:1   ✖ missing required package.json field `license`
          npm/required-package-fields
          severity error
  6:6   ▲ dependencies in `dependencies` are not sorted alphabetically
          npm/sorted-dependencies · fixable
          severity warning · span 114..126 · fix: sort dependency section alphabetically
  8:10  ✖ internal dependency `shared` should use the workspace: protocol (found `^0.0.0`)
          npm/workspace-protocol · fixable
          severity error · span 165..171 · fix: rewrite dependency to workspace:*

packages/shared/package.json
  1:1  ✖ missing required package.json field `description`
         npm/required-package-fields
         severity error
  1:1  ✖ missing required package.json field `repository`
         npm/required-package-fields
         severity error
  1:1  ✖ missing required package.json field `license`
         npm/required-package-fields
         severity error

Run `monochange check --fix` to fix 2 issues automatically.
