crates/monochange_integration_tests/tests/snapshots/check_lint_output__check_reports_redundant_changeset_entries_without_fix.snap
---
source: crates/monochange_integration_tests/tests/check_lint_output.rs
expression: output
---
✖ Checks failed · 3 errors · 3 fixable

.changeset/redundant-flow.md
  2:6  ✖ changeset entry for `core` repeats a bump that type `feat` already implies; use the inline form `core: feat`
         changesets/prefer-inline · fixable
         severity error · span 9..35 · fix: Convert change entry to inline form

.changeset/redundant-object.md
  2:6  ✖ changeset entry for `core` repeats a bump that type `feat` already implies; use the inline form `core: feat`
         changesets/prefer-inline · fixable
         severity error · span 9..36 · fix: Convert change entry to inline form
  8:8  ✖ changeset entry for `shared` declares a bare bump that is also a change type; use the inline form `shared: patch`
         changesets/prefer-inline · fixable
         severity error · span 75..89 · fix: Convert change entry to inline form

Run `monochange check --fix` to fix 3 issues automatically.
