crates/monochange_integration_tests/tests/snapshots/check_lint_output__check_sorted_fix_preserves_package_json_field_order-2.snap
---
source: crates/monochange_integration_tests/tests/check_lint_output.rs
expression: contents
---
{
    "name": "app",
    "version": "0.0.0",
    "type": "module",
    "description": "Application package",
    "dependencies": {
        "shared": "^0.0.0",
        "zeta": "1.0.0"
    },
    "devDependencies": {
        "vitest": "1.0.0"
    }
}
