crates/monochange_integration_tests/tests/snapshots/check_lint_output__check_sorted_fix_preserves_package_json_field_order.snap
---
source: crates/monochange_integration_tests/tests/check_lint_output.rs
expression: "normalize_workspace_paths(fixture.path(), output)"
---
✖ Checks failed · 5 errors · fixed 1 file

packages/app/package.json
  1:1  ✖ missing required package.json field `repository`
         npm/required-package-fields
  1:1  ✖ missing required package.json field `license`
         npm/required-package-fields

packages/shared/package.json
  1:1  ✖ missing required package.json field `description`
         npm/required-package-fields
  1:1  ✖ missing required package.json field `repository`
         npm/required-package-fields
  1:1  ✖ missing required package.json field `license`
         npm/required-package-fields
